--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           r-version: '4.2.0'
 
+      - name: Setup Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          tinytex: true # to install LaTeX to build PDF book
+
       - name: Install R Dependencies
         uses: r-lib/actions/setup-renv@v2
         with:
