--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,14 @@ bibliography: references.bib
 
 format:
   html:
-    theme: default
+    theme:
+    - cosmo
+    - style.scss
+   # mainfont: serif
+    
+    code-fold: show
+    code-line-numbers: true
+    code-tools: true
     grid: 
       sidebar-width: 250px # Max width of left sidebar (standard is 250px)
       body-width: 1000px # Max width of body (standard is 800px)
